fix field display on mobile

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -125,6 +125,9 @@ select, input
   .round-button
     margin 0 15px
 
+  .form-group
+    width 40%
+
 .autocomplete
   position relative
   display inline-block
